# arc-failure-atlas

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
agent_context/conventions/: code_and_data_conventions.md  schema_contracts.md  working_agreements.md
agent_context/project_brief/: overview.md
agent_context/prompts/: pr_review_prompt.md  repo_onboarding_prompt.md
agent_context/repo_map/: repo_map.md
agent_context/tasks/: current_priorities.md  open_questions.md
src/: DECISIONS.md  main.py
src/atlas_arc_failure/ingestion/: main.py
